# ziplogstream

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/rules/: python.md  tests.md
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  error-contract.md  release.md  testing.md
scripts/: benchmark_streaming.py  stress_large_zip.py
scripts/results/: bench.txt  stress.txt
src/zip_logstream/: __init__.py  config.py  errors.py  protocols.py  version.py
src/zip_logstream/archive/: __init__.py  member_resolution.py  validators.py
src/zip_logstream/streaming/: __init__.py  buffered_line_reader.py  line_streamer.py
src/ziplogstream/: __init__.py  config.py  errors.py  protocols.py
src/ziplogstream/archive/: __init__.py  member_resolution.py
src/ziplogstream/streaming/: __init__.py  buffered_line_reader.py  line_streamer.py
tests/integration/: test_custom_resolver_zip.py  test_error_contract_zip.py  test_stream_crlf_zip.py  test_stream_oversized_line_zip.py  test_stream_single_member_zip.py
tests/unit/archive/: test_member_resolution.py  test_validators.py
tests/unit/config/: test_config.py
tests/unit/package/: test_errors.py  test_exports.py  test_version.py
tests/unit/streaming/: test_buffered_line_reader.py  test_line_streamer.py
